# JenkinsTest

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  build.gradle  settings.gradle
include/: Rectangle.h  Shape.h  Triangle.h
src/: CMakeLists.txt  Shape.cpp  ShapesRunner.cpp
src/main/cpp/: Rectangle.cpp  Triangle.cpp  app.cpp
src/main/headers/: app.h
src/test/cpp/: app_test.cpp
test/: ShapesTest.cpp
